# rp2040-pico-command-line-interpreter

./: README.md
src/: CMakeLists.txt  console.c  console.h  test.c  user_funcs.c  user_funcs.h
test/: CMakeLists.txt  test.c
